--- a/win32/gametest.vcxproj
+++ b/win32/gametest.vcxproj
@@ -11,11 +11,21 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\src\camera.c" />
+    <ClCompile Include="..\src\entity.c" />
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\graphics.c" />
+    <ClCompile Include="..\src\simple_logger.c" />
+    <ClCompile Include="..\src\sprite.c" />
+    <ClCompile Include="..\src\vector.c" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\src\camera.h" />
+    <ClInclude Include="..\src\entity.h" />
     <ClInclude Include="..\src\graphics.h" />
+    <ClInclude Include="..\src\simple_logger.h" />
+    <ClInclude Include="..\src\sprite.h" />
+    <ClInclude Include="..\src\vector.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{7FDED120-6E7E-4B36-A32B-C84298D67EDE}</ProjectGuid>
@@ -43,23 +53,20 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <IncludePath>C:\Users\djkehoe\Ironsoft Studios\libs\include;$(IncludePath)</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <ReferencePath>C:\Users\djkehoe\Ironsoft Studios\libs\lib\x86;$(LibraryPath)</ReferencePath>
-    <LibraryPath>C:\Users\djkehoe\Ironsoft Studios\libs\lib\x86;$(LibraryPath)</LibraryPath>
     <OutDir>../</OutDir>
+    <IncludePath>C:\SDL 2.0\SDL2_image-2.0.1\include;C:\SDL 2.0\SDL2_mixer-2.0.1\include;C:\SDL 2.0\SDL2_ttf-2.0.13\include;C:\SDL 2.0\SDL2-2.0.4\include;$(IncludePath)</IncludePath>
+    <ReferencePath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(ReferencePath)</ReferencePath>
+    <LibraryPath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <IncludePath>C:\Users\djkehoe\Ironsoft Studios\libs\include;$(IncludePath)</IncludePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <ReferencePath>C:\Users\djkehoe\Ironsoft Studios\libs\lib\x86;$(LibraryPath)</ReferencePath>
-  </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <LibraryPath>C:\Users\djkehoe\Ironsoft Studios\libs\lib\x86;$(LibraryPath)</LibraryPath>
     <OutDir>../</OutDir>
+    <IncludePath>C:\SDL 2.0\SDL2_image-2.0.1\include;C:\SDL 2.0\SDL2_mixer-2.0.1\include;C:\SDL 2.0\SDL2_ttf-2.0.13\include;C:\SDL 2.0\SDL2-2.0.4\include;$(IncludePath)</IncludePath>
+    <ReferencePath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(ReferencePath)</ReferencePath>
+    <LibraryPath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
