Way more stuff. Projectiles. Camera. Movement. Powerups.

--- a/win32/gametest.vcxproj.filters
+++ b/win32/gametest.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="..\src\player.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\projectile.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\sprite.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\src\player.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\projectile.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
