--- a/win32/gametest.vcxproj
+++ b/win32/gametest.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\graphics.c" />
     <ClCompile Include="..\src\player.c" />
+    <ClCompile Include="..\src\projectile.c" />
     <ClCompile Include="..\src\simple_logger.c" />
     <ClCompile Include="..\src\sprite.c" />
     <ClCompile Include="..\src\vector.c" />
@@ -25,6 +26,7 @@
     <ClInclude Include="..\src\entity.h" />
     <ClInclude Include="..\src\graphics.h" />
     <ClInclude Include="..\src\player.h" />
+    <ClInclude Include="..\src\projectile.h" />
     <ClInclude Include="..\src\simple_logger.h" />
     <ClInclude Include="..\src\sprite.h" />
     <ClInclude Include="..\src\vector.h" />
