--- a/win32/gametest.vcxproj
+++ b/win32/gametest.vcxproj
@@ -12,9 +12,11 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\camera.c" />
+    <ClCompile Include="..\src\enemy.c" />
     <ClCompile Include="..\src\entity.c" />
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\graphics.c" />
+    <ClCompile Include="..\src\platforms.c" />
     <ClCompile Include="..\src\player.c" />
     <ClCompile Include="..\src\projectile.c" />
     <ClCompile Include="..\src\simple_logger.c" />
@@ -23,8 +25,10 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\camera.h" />
+    <ClInclude Include="..\src\enemy.h" />
     <ClInclude Include="..\src\entity.h" />
     <ClInclude Include="..\src\graphics.h" />
+    <ClInclude Include="..\src\platforms.h" />
     <ClInclude Include="..\src\player.h" />
     <ClInclude Include="..\src\projectile.h" />
     <ClInclude Include="..\src\simple_logger.h" />
