--- a/win32/gametest.vcxproj
+++ b/win32/gametest.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\camera.c" />
+    <ClCompile Include="..\src\cJSON.c" />
     <ClCompile Include="..\src\enemy.c" />
     <ClCompile Include="..\src\entity.c" />
     <ClCompile Include="..\src\game.c" />
@@ -25,6 +26,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\camera.h" />
+    <ClInclude Include="..\src\cJSON.h" />
     <ClInclude Include="..\src\enemy.h" />
     <ClInclude Include="..\src\entity.h" />
     <ClInclude Include="..\src\graphics.h" />
@@ -64,17 +66,17 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <OutDir>../</OutDir>
-    <IncludePath>C:\SDL 2.0\SDL2_image-2.0.1\include;C:\SDL 2.0\SDL2_mixer-2.0.1\include;C:\SDL 2.0\SDL2_ttf-2.0.13\include;C:\SDL 2.0\SDL2-2.0.4\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\SDL 2.0\SDL2_image-2.0.1\include;C:\SDL 2.0\SDL2_mixer-2.0.1\include;C:\SDL 2.0\SDL2_ttf-2.0.13\include;C:\SDL 2.0\SDL2-2.0.4\include;C:\SDL 2.0\glib\glib-2.28\lib\glib-2.0\include;C:\SDL 2.0\glib\glib-2.28\include\glib-2.0;$(IncludePath)</IncludePath>
     <ReferencePath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(ReferencePath)</ReferencePath>
-    <LibraryPath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;C:\SDL 2.0\glib\glib-2.28\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <OutDir>../</OutDir>
-    <IncludePath>C:\SDL 2.0\SDL2_image-2.0.1\include;C:\SDL 2.0\SDL2_mixer-2.0.1\include;C:\SDL 2.0\SDL2_ttf-2.0.13\include;C:\SDL 2.0\SDL2-2.0.4\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\SDL 2.0\SDL2_image-2.0.1\include;C:\SDL 2.0\SDL2_mixer-2.0.1\include;C:\SDL 2.0\SDL2_ttf-2.0.13\include;C:\SDL 2.0\SDL2-2.0.4\include;C:\SDL 2.0\glib\glib-2.28\lib\glib-2.0\include;C:\SDL 2.0\glib\glib-2.28\include\glib-2.0;$(IncludePath)</IncludePath>
     <ReferencePath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(ReferencePath)</ReferencePath>
-    <LibraryPath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\SDL 2.0\SDL2_image-2.0.1\lib\x86;C:\SDL 2.0\SDL2_mixer-2.0.1\lib\x86;C:\SDL 2.0\SDL2_ttf-2.0.13\lib\x86;C:\SDL 2.0\SDL2-2.0.4\lib\x86;C:\SDL 2.0\glib\glib-2.28\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -104,7 +106,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
