--- a/win32/gametest.vcxproj
+++ b/win32/gametest.vcxproj
@@ -17,6 +17,8 @@
     <ClCompile Include="..\src\entity.c" />
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\graphics.c" />
+    <ClCompile Include="..\src\mainmenu.c" />
+    <ClCompile Include="..\src\pausemenu.c" />
     <ClCompile Include="..\src\platforms.c" />
     <ClCompile Include="..\src\player.c" />
     <ClCompile Include="..\src\projectile.c" />
@@ -30,6 +32,8 @@
     <ClInclude Include="..\src\enemy.h" />
     <ClInclude Include="..\src\entity.h" />
     <ClInclude Include="..\src\graphics.h" />
+    <ClInclude Include="..\src\mainmenu.h" />
+    <ClInclude Include="..\src\pausemenu.h" />
     <ClInclude Include="..\src\platforms.h" />
     <ClInclude Include="..\src\player.h" />
     <ClInclude Include="..\src\projectile.h" />
@@ -106,7 +110,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib</AdditionalDependencies>
+      <AdditionalDependencies>kernel32.lib;user32.lib;gdi32.lib;winspool.lib;comdlg32.lib;advapi32.lib;shell32.lib;ole32.lib;oleaut32.lib;uuid.lib;odbc32.lib;odbccp32.lib;SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib</AdditionalDependencies>
       <SubSystem>Console</SubSystem>
     </Link>
   </ItemDefinitionGroup>
