--- a/win32/gametest.vcxproj
+++ b/win32/gametest.vcxproj
@@ -17,6 +17,8 @@
     <ClCompile Include="..\src\entity.c" />
     <ClCompile Include="..\src\game.c" />
     <ClCompile Include="..\src\graphics.c" />
+    <ClCompile Include="..\src\initialize.c" />
+    <ClCompile Include="..\src\levelcomplete.c" />
     <ClCompile Include="..\src\mainmenu.c" />
     <ClCompile Include="..\src\pausemenu.c" />
     <ClCompile Include="..\src\platforms.c" />
@@ -32,6 +34,8 @@
     <ClInclude Include="..\src\enemy.h" />
     <ClInclude Include="..\src\entity.h" />
     <ClInclude Include="..\src\graphics.h" />
+    <ClInclude Include="..\src\initialize.h" />
+    <ClInclude Include="..\src\levelcomplete.h" />
     <ClInclude Include="..\src\mainmenu.h" />
     <ClInclude Include="..\src\pausemenu.h" />
     <ClInclude Include="..\src\platforms.h" />
